--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Mukta', sans-serif;
 }
@@ -33,7 +37,7 @@ button {
 }
 
 .section:nth-child(4) {
-    background: #142a45;
+    background: #142A45;
 }
 
 .section:nth-child(5) {
@@ -49,7 +53,7 @@ button {
 .button_back {
     background: #fff;
     border-radius: 50%;
-    box-shadow: 0px 10px 20px rgba(50, 50,50);
+    box-shadow: 0px 10px 20px rgba(50, 50, 50, 1);
     cursor: pointer;
     display: grid;
     height: 50px;
@@ -64,7 +68,7 @@ button {
 }
 
 .button_back:hover {
-    animation: animateToTop .3s ease-in-out infinite alternate;
+    animation: animateToTop 0.3s ease-in-out infinite alternate;
     background: #323232;
 }
 
@@ -89,8 +93,8 @@ button {
     color: #fff;
 }
 
-.button_back::before {
-    border: 2px solid rgba(255, 255, 255, .8);
+.button_back:before {
+    border: 2px solid rgba(255, 255, 255, 0.8);
     border-radius: 50%;
     bottom: -10px;
     content: '';
@@ -102,10 +106,10 @@ button {
     transform: scale(0.2);
     transition: 0.3s ease-in-out;
     transition-delay: 0.3s;
-    visibility: hidden;
+    visibility: visible;
 }
 
-.show_button_back::before {
+.show_button_back:before {
     opacity: 1;
     transform: scale(1);
     visibility: visible;
